--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Relatório de Tarefas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- ✅ Google site verification -->
+  <meta name="google-site-verification" content="YO-f8ybj5_Anr517VeAMK5pkDoIOIEVsskJRhxHBauY" />
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
 </head>
